<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="30dp"
    android:background="@drawable/rounded_button"
    android:backgroundTint="@color/white">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_facility_details"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="10dp"
        android:textColor="@color/black"
        android:id="@+id/title"/>

    <TextView
        android:paddingVertical="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/facility_name"
        android:id="@+id/facilityNameTitle"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title"
        android:layout_marginTop="15dp"
        android:paddingStart="5dp"/>

    <TextView
        android:paddingVertical="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/location"
        android:id="@+id/facilityLocationTitle"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/facilityNameTitle"
        android:paddingStart="5dp"/>

    <TextView
        android:paddingVertical="5dp"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="First Name"
        android:id="@+id/facilityName"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@id/facilityNameTitle"
        app:layout_constraintTop_toBottomOf="@id/title"
        android:layout_marginTop="15dp"
        android:layout_marginStart="10dp"
        android:paddingStart="5dp"/>


    <TextView
        android:paddingVertical="5dp"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="First Name"
        android:id="@+id/location"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:layout_marginStart="10dp"
        app:layout_constraintStart_toEndOf="@id/facilityLocationTitle"
        app:layout_constraintTop_toBottomOf="@id/facilityName"
        android:paddingStart="5dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/report_amp_delete"
        app:layout_constraintTop_toBottomOf="@id/location"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/rounded_button"
        android:layout_marginTop="20dp"
        android:padding="10dp"
        android:backgroundTint="@color/red1"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="14sp"
        android:id="@+id/delete"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/exit"
        app:layout_constraintTop_toBottomOf="@id/facilityLocationTitle"
        app:layout_constraintEnd_toStartOf="@id/delete"
        android:background="@drawable/button_bg_stroke_round"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:padding="10dp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="14sp"
        android:id="@+id/cancel"/>

</androidx.constraintlayout.widget.ConstraintLayout>